--- a/Bíró/style.css
+++ b/Bíró/style.css
@@ -19,3 +19,19 @@ table
     background-color: #A7FFC3;
     border-spacing: 5px;
 }
+.oldal
+{
+    width: 50px;
+}
+h1
+{
+    text-align: center;
+}
+.menusor
+{
+    height: 125px;
+}
+.keret
+{
+    border: 1px solid black;
+}
