--- a/Hf. március 29/style.css
+++ b/Hf. március 29/style.css
@@ -44,4 +44,38 @@
 {
     font-size: 16px;
     background-color: brown;
+    font-family: 'Courier New', Courier, monospace;
+    color: blanchedalmond;
+}
+.P7
+{
+    font-size: 26px;
+    background-color: aqua;
+    font-weight: bold;
+    text-align: center;
+    text-decoration-line: overline;
+}
+.P8
+{
+    font-family: "Audiowide", sans-serif;
+    font-size: 22px;
+    background-color: rgb(80, 25, 38);
+    color: white;
+    margin: 3px;
+    border: 3px dotted rgb(186, 86, 86);
+}
+.P9
+{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 18px;
+    color: azure;
+    background-image: url(./istockphoto-1420755455-170667a.jpg);
+}
+.P10
+{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    background-image: url(./istockphoto-1169630303-170667a.jpg);
+    color: aqua;
+    padding: 1px;
 }
