--- a/Gyakorlás 2024/05.17/Forrasok/2. html forrás/style.css
+++ b/Gyakorlás 2024/05.17/Forrasok/2. html forrás/style.css
@@ -12,6 +12,8 @@ body{
 .fejlec{
 	background-position: center center;
 	background-size: cover;
+	background-image: url(mezo.jpg);
+	background-repeat: no-repeat;
 }
 .fejlec h1{
 	font-family: "Chango",Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -37,20 +39,24 @@ nav.doboz ul a
 {
 	color:#604c37;
 	font-size:18px;
+
 }
 nav.doboz ul a:hover
 {
 	color:white;
+	background-color: #604c37
 }
 .doboz {
 	border: 1px solid #597b9f;
 	border-radius: 5px;
 	box-shadow: 2px 2px 10px #888888;
 	font-size:16px;
+	background-color: #d6be7a;
 }
 
 footer.lablec a:hover{
 	text-decoration: none;
+	font-weight: bold;
 
 }
 
@@ -59,3 +65,5 @@ footer.lablec a:hover{
 {
 	font-size:smaller;
 }
+
+p { text-align: justify;}
